fix: styling issues and dark mode support

--- a/src/views/my-catalog/AddEditSpec.css
+++ b/src/views/my-catalog/AddEditSpec.css
@@ -1,13 +1,17 @@
 
-.tab-content {
-    margin-top: 5vh;
-}
-
 .text-align-left {
     text-align: left;
 }
 .text-align-right {
     text-align: right;
+}
+
+#showJsonCard {
+    margin: 25px;
+}
+
+#showJsonCard pre {
+    padding: 25px;
 }
 
 .marginTop {
